src/style.css
/* ... */
.project-post header h1 {
  padding-left: 0;
}

main article.posts.related {
  margin-bottom: 4em;
  padding: 2em;
  
  background:#2E1FB8;
  border: 4px solid black;
  border-radius: 16px;
  color: white;
  font-family: "DM Sans";
}

main article.posts.related h2 {
  font-family: "DM Sans";
}

main article.posts.related ul {
  grid-template-columns: 1fr 1fr 1fr;
}

main article.posts.related ul li {
  grid-column: span 1;
}

main article.posts.related h3 a {
  --underline-background-color:#2E1FB8;
  color: white;
}

main article.posts.related a {
  --underline-background-color:#2E1FB8;
  color: white;
}

/* main article.posts.related .byline {
  font-family: "DM Mono";
} */

main > header .default-image {
    position: relative;
    /* z-index: -1; */
}

main > header .default-image img.photo {
  margin-left: -2em;
    /* width: 100%; */
    object-fit: cover;
    mask-image: url(pidgin/svg/blob5.svg);
    mask-repeat: no-repeat;
    mask-position: top center;
    mask-size: 86% 100%;
    transition: .2s ease-in;
    margin-top: 2.5em;
}

main > header .default-image img.shape1 {
    width: 30%;
    position: absolute;
    bottom: 0;
    left: 0;
    z-index: 10;
    /* transform: rotate(180deg); */
}

main > header .default-image img.shape2 {
    width: 40%;
    position: absolute;
    bottom: 5%;
    right: 0;
    z-index: -10;
}

main > header .default-image img.shape3 {
    width: 66%;
    position: absolute;
    top: -10%;
    right: 0;
    z-index: 5;
    transform: rotate(45deg);
}

main > footer .search button {
  z-index: 1;
}

main .content p > img {
  width: 100%;
  height: auto;
}

main .content span.appear-as-button a {
  --underline-background-color: black;
    display: inline-block;
    margin-top: 1em;
    padding: .6em 1.6em;
    font-family: "DM Sans";
    font-weight: 700;
    font-size: 1.2em;
    color: white;
    background: black;
    border-radius: 60px;
    text-transform: capitalize;
    box-sizing: border-box;
    border: 4px solid transparent;
}

main .content span.appear-as-button a:hover {
  --underline-background-color: white;

  color: black;
  background: white;
  border-color: black;
}



body > footer .footer-menu ul {
  min-height: 10em;
}


.home-narrative article.topic-summary.about .description p {
  font-size: 1.5em;
}

article.topic-summary.highlight figure {
  height: auto;
}

.home-narrative article.posts ul {
  gap: 3em 5em;
}


@media (min-width: 1300px) {

  body {
    width: 1300px;
    margin: 0 auto;
  }

  article.topic-summary, article.topic-summary.focus-area, article.topic-summary.highlight, .home-narrative article.posts, body main article.topic-summary.newsletter {
    grid-column: 3 / 10;
  }

  body main article.topic-summary.intro {
    grid-column: 2 / 11;
  }

  body main article.topic-summary.newsletter {
    gap: 4em;
  }

  body footer {
    border-radius: 16px;
    margin-bottom: 4em;
  }

}


@media (min-width: 1500px) {

  .home-index .data-points .data-point.khan-academy h2 {
    text-indent: -6000px;
  }

  .home-narrative article.posts ul li:nth-child(1) article.post {
    /* margin-bottom: 2em; */
  }

}


@media (max-width: 1190px) {
  
  body main article.topic-summary.newsletter {
    display: block;
  }

}

@media (max-width: 1140px) {

  .home-index main footer .attribution-list ul.expand {
    grid-template-columns: 1fr 1fr;
  }

}

@media (max-width: 900px) {

  .home-index main .case-studies {
    background: var(--vocabulary-brand-color-tomato);
    padding: 5%;

  }

  .home-index .case-studies footer {
    margin: 0;
    margin-top: 2em;
    padding: 0;
  }

  .home-index .data-points ul {
    /* display: block; */
    box-sizing: border-box;
    width: 90%;
    margin: 0 auto;
    /* padding: 0 1em; */
  }

  .home-index main .posts ul {
    display: flex;
    flex-wrap: wrap;
  }

  .home-index main footer {
    width: 100%;
    box-sizing: border-box;
  }

  .faq-index .toc article.featured > ul {
    grid-template-columns: 1fr 1fr;
  }

}

@media (max-width: 765px) {

  body main header {
    display: block;
  }

  body main article.topic-summary.about figure {
    display: none;
  }

  .home-narrative article.topic-summary.focus-area:nth-of-type(odd) figure {
    order: -1;
  } 

  article.topic-summary.highlight figure {
    margin-bottom: 2em;
  }

  main ul.attributions {
    display: block;
  }
}

@media (max-width: 705px) {

  .home-index .topic-summary {
    display: block;
  }

  .home-index .topic-summary figure {
    display: none;
  }

  .home-index .case-studies > ul {
    grid-template-columns: 1fr 1fr;
  }

  .home-index .data-points ul {
    display: block;
    padding-top: 2em;
  }

   .home-index main article.posts.featured > ul li:nth-child(1) {
    padding: 2em;
  }

  .home-index main .posts {
      padding: 0 var(--vocabulary-page-edges-space);
  }

  .home-index main footer .attribution-list ul.expand {
      display: block;
  }
}

@media (max-width: 480px) {
  .faq-index .toc article.featured > ul {
    display: block;
  }
}

@media (max-width: 425px) {

  .home-index .attribution-list {
    padding: 2em;
  }

  .home-index .attribution-list h2 {
    width: 50%;

    hyphens: auto;
    word-break: break-word;
  }

}

@media (max-width:480px) {
  .home-index .case-studies > ul {
    display: block;
  }

  .home-index .case-studies > ul li {
    margin-bottom: 3em;
  }
}

@media (max-width: 425px) {



  .home-index .attribution-list {
    padding: 2em;
  }

  .home-index .attribution-list h2 {
    width: 50%;
    font-size: .5em;
    hyphens: auto;
    word-break: break-word;

  }

}

/* patches */

/* main > article figure img, main > figure img {
  width: 100%;
} */

main .content ul, main .content ol {
    line-height: 150%;
}

.chooser-page main .content ul, .chooser-page main .content ol {
  line-height: 100%;
}
/* ... */

